--- a/IdentidadByEMC/NegocioEMC/NegocioEMC.csproj
+++ b/IdentidadByEMC/NegocioEMC/NegocioEMC.csproj
@@ -6,10 +6,14 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="ExcelDataReader" Version="3.7.0-develop00310" />
+    <PackageReference Include="ExcelDataReader.DataSet" Version="3.7.0-develop00310" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DatosEMC\DatosEMC.csproj" />
+    <ProjectReference Include="..\ImageEMC\ImageEMC.csproj" />
   </ItemGroup>
 
 </Project>
