--- a/IdentidadByEMC/IdentidadAPI/IdentidadAPI.csproj
+++ b/IdentidadByEMC/IdentidadAPI/IdentidadAPI.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\EfrainMejiasC\Documents\Repositorios\Identidad\IdentidadByEMC\IdentidadAPI\IdentidadAPI.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.10" />
