--- a/IdentidadByEMC/IdentidadSite/IdentidadSite.csproj
+++ b/IdentidadByEMC/IdentidadSite/IdentidadSite.csproj
@@ -1,7 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>C:\Users\EfrainMejiasC\Documents\Repositorios\Identidad\IdentidadByEMC\IdentidadSite\IdentidadSite.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\EfrainMejiasC\Documents\Repositorios\Identidad\IdentidadByEMC\IdentidadSite\IdentidadSite.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
